<resources>
    <string name="app_name">Movie Library</string>
    <string name="title_activity_main">Movies</string>
    <string name="title_activity_detail"> </string>
    <string name="title_activity_search">Search</string>

    <string name="MovieTitle">Add Movie</string>
    <string name="movie_image">Movie Image</string>
    <string name="YearListItem">"Year: "</string>
    <string name="action_sort">Sort</string>

    <string name="iconReferences">https://material.io/icons/, https://materialdesignicons.com/</string>
    <string name="delete_all">Delete All</string>
    <string name="addbutton">addButton</string>
    <string name="barcode_scanner_button">barcode scanner button</string>
    <string name="button_undo">Undo</string>
    <string name="menu_checkbox_undo">Undo</string>
    <string name="btn_ok">OK</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for Movie</string>
    <string name="movie_poster">Movie Poster</string>

    <string name="add_new">Add New</string>
    <string name="search_button">SEARCH</string>
    <string name="confirm">Confirm</string>
    <string name="confirmDialog">Confirm that you wish to delete all items?</string>
    <string name="searchDialogTitle">Add Movie</string>
    <string name="searchDialogHint">Title</string>
    <string name="noInternetMessage">No internet connection</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="plot">Plot:</string>
    <string name="genres">Genre(s):</string>
    <string name="cast">Cast:</string>
    <string name="noTitleError">Search title was blank</string>
    <string name="runtime">Runtime:</string>
    <string name="release_date">Released:</string>
    <string name="add_to_list">Add to List</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_movies">My Movies</string>
    <string name="discover">Discover</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="title_activity_popular">Popular Movies</string>
</resources>
